@@ -9,6 +9,8 @@ Bug Fixes
 4. Workaround for a Qt4 bug added, that produces horrible performance
    when painting curves with a pen width > 1.
 5. Background for the tracker text of QwtPickers fixed.
+   Improved (faster + better rendered texts) implementation of
+   painting tracker texts, using capabilities of Qt >= 4.3.
 
 Changes
 -------
